--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name:</label>
+		<input type="text" id="name" placeholder="Name" required><br>
+		<label for="phone">Phone Number:</label>
+		<input type="text" id="phone" placeholder="Phone Number"required><br>
+		<label for="address">Address:</label>
+		<input type="text" id="address" placeholder="Address" required><br>
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
+		<label for="multiselect">Please select your preferred breeds</label>
+		<select name ="select_one" id="multiselect">
+			<option value="beagle">Beagle</option>
+			<option value="poodle">poodle</option>
+			<option value="bulldog">bulldog</option>
+		</select><br>
+		<button type="submit" value="Submit">Submit</button>
+	</form>	
     <script type="text/javascript" src="./script.js">
 </script>
 
