--- a/main.html
+++ b/main.html
@@ -17,13 +17,13 @@
 		<input type="text" id="address" placeholder="Address" required><br>
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
 		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
-		<label for="multiselect">Please select your preferred breeds</label>
-		<select name ="select_one" id="multiselect">
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select name ="select_one" id="multiSelect">
 			<option value="beagle">Beagle</option>
 			<option value="poodle">poodle</option>
 			<option value="bulldog">bulldog</option>
 		</select><br>
-		<button type="submit" value="Submit">Submit</button>
+		<input type="submit" value="Submit" id="submit">
 	</form>	
     <script type="text/javascript" src="./script.js">
 </script>
